--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -526,7 +526,7 @@ aside{
         font-size: 10px;
         font-family: "fonteBatmanBg"; 
         font-weight: bold;
-        
+        letter-spacing: 3px;
     }
 
 }
