--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -524,7 +524,7 @@ aside{
         text-align: center;
         margin-top: 30px;
         font-size: 10px;
-        font-family: "fonteBatmanBg"; 
+        font-family: "arial"; 
         font-weight: bold;
         letter-spacing: 3px;
     }
